--- a/P&T Entertainment/html/index.html
+++ b/P&T Entertainment/html/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>P&T Entertainment</title>
-        <link rel="stylesheet" href="/css/index.css">
+<!--         <link rel="stylesheet" href="/css/index.css"> -->
+        <link rel="stylesheet" href="../style.css">
         <meta charset="utf-8"/>
     </head>
     
