--- a/P&T Entertainment/html/index.html
+++ b/P&T Entertainment/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>P&T Entertainment</title>
 <!--         <link rel="stylesheet" href="/css/index.css"> -->
-        <link rel="stylesheet" href="../style.css">
+        <link rel="stylesheet" href="../landing-page.css">
         <meta charset="utf-8"/>
     </head>
     
