--- a/P&T Entertainment/html/landing-page.html
+++ b/P&T Entertainment/html/landing-page.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>P&amp;T Entertainment</title>
-        <link rel="stylesheet" href="/css/landing-page.css">
+<!--         <link rel="stylesheet" href="/css/landing-page.css">  landing-page.css -->
+        <link rel="stylesheet" href="../landing-page.css">
+
         <meta charset="utf-8"/>
 
         <!-- Font Families -->
