--- a/P&T Entertainment/html/landing-page.html
+++ b/P&T Entertainment/html/landing-page.html
@@ -3,7 +3,7 @@
     <head>
         <title>P&amp;T Entertainment</title>
 <!--         <link rel="stylesheet" href="/css/landing-page.css">  landing-page.css -->
-        <link rel="stylesheet" href="../landing-page.css">
+        <link rel="stylesheet" href="../css/landing-page.css">
 
         <meta charset="utf-8"/>
 
